public/stylesheets/style.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

body {
	margin: 0;
	padding: 0;
	font-family: 'Source Sans Pro', arial;
	font-size: 14px;
	color: #222;
	height: 100%;
	background-color: #111;
}

.clear {
	clear: both;
}

.clearfix:after {
   clear:both;
   content:' ';
   display:block;
   font-size:0;
   line-height:0;
   visibility:hidden;
   width:0;
   height:0
}

a {
	text-decoration: none;
}

/*----------FONTS----------*/
h1 {
	font-size: 80px;
	color: #FFF;
	text-align: center;
	font-weight: 300;
	margin: 0;
	padding: 0;
}

h5 {
	font-size: 16px;
	margin: 0px 0px 20px 0px;
	text-transform: uppercase;
}

/*----------BUTTONS----------*/
button.btn-std {
	font-family: 'Source Sans Pro', arial;
	background-color: #358CCE;
	-webkit-appearance: none;
	border: none;
	color: #FFF;
	font-weight: 400;
}

button.btn-lg {
	font-size: 28px;
	height: 70px;
	width: 240px;
}

button.btn-md {
	height: 40px;
	width: 120px;
	line-height: 40px;
	font-size: 16px;
}

button.btn-start {
	margin: 100px auto 0px auto;
	display: block;
}

button.publish {
	position: absolute;
	top: -40px;
	right: 40px;
	display: block;
}

/*----------LAYOUT----------*/

.banner {
 	background-color: #2E4F7A;
}

.banner-inner {
 	margin: 0 auto;
 	max-width: 900px;
 	padding: 0px 50px;
}

.logo {
	color: #FFF;
	font-size: 28px;
	padding: 40px 0px 100px 0px;
}

.info-box {
	height: 500px;
	background-color: #FFF;
}

.tip {
	width: 1000px;
	margin: 0 auto;
	height: 80px;
	line-height: 80px;
	color: #999;
	font-size: 16px;
	text-indent: 25px;
	background-image: url(../images/alert-blue.png);
	background-repeat: no-repeat;
	background-position: left center;
}

.container {
	width: 1000px;
	background-color: #ddd;
	margin: 0px auto 40px auto;
	position: relative;
}

.tray {
	float: left;
	width: 240px;
	background-color: #ccc;
	min-height: 560px;
}

.component-header {
	margin: 40px 0px 20px 40px;
}

.row {
	margin-bottom: 5px;
}

.input {
	float: left;
	height: 40px;
	width: 40px;
	background-image: url(../images/output.png);
	background-repeat: no-repeat;
	background-position: center;
}

.output {
	float: left;
	height: 40px;
	width: 40px;
	background-image: url(../images/output.png);
	background-repeat: no-repeat;
	background-position: center;
}

.draggable {
	cursor: move;
	height: 40px;
	width: 155px;
	background-color: #eee;
	margin-bottom: 5px;
	border-radius: 3px;
	line-height: 40px;
	text-indent: 10px;
	border-left: 5px solid #358cce;
	float: left;
}

.phone-container {
	float: left;
	width: 300px;
	margin-left: 40px;
}

.phone-top {
	background-color: #333;
	height: 40px;
	width: 100%;
	margin-top: 40px;
	border-radius: 6px 6px 0px 0px;
	background-image: url(../images/mic.png);
	background-position: center;
	background-repeat: no-repeat;
}

.phone-canvas {
	background-color: #FFF;
	height: 400px;
	width: 100%;
}

.phone-bottom {
	background-color: #333;
	height: 40px;
	width: 100%;
	border-radius: 0px 0px 6px 6px;
	background-image: url(../images/circle.png);
	background-position: center;
	background-repeat: no-repeat;
}

.cards {
	float: left;
	width: 80px;
	padding-top: 60px;
	margin-left: 40px;
	position: relative;
}

.card {
	height: 100px;
	width: 100%;
	background-color: #FFF;
}

.add-card {
	height: 40px;
	width: 100%;
	background-color: #ff7b00;
	color: #fff;
	line-height: 40px;
	text-align: center;
	font-size: 13px;
	position: absolute;
	top: 0px;
}

.console {
	background-color: #444;
	position: absolute;
	top: 0px;
	bottom: 0px;
	right: 0px;
	left: 740px;
	color: #999;
}

.component-log {
	height: 160px;
	width: 100%;
	background-color: #333;
}

.inner {
	padding: 40px;
}

